<resources>
    <string name="app_name">StudyTimes</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_caps">SIGN UP</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_caps">SIGN IN</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="i_agree_to_the">I agree to the</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="logo_for_splash_screen">Logo for Splash Screen</string>
    <string name="forget_password">Forget Password?</string>
    <string name="not_register_yet">Not register yet?</string>
    <string name="back">Back</string>
    <string name="enter_your_email">Enter your email to get an email to reset your password</string>
    <string name="reset">Reset</string>
    <string name="reset_email_was_sent">Reset email was sent to your email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="notifications">Notifications</string>
    <string name="profile">Profile</string>
</resources>